--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,45 @@
 body {
     font-family: "Poppins", sans-serif;
     background-color: aliceblue;
+    text-align: center;
     padding: 0;
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
 }
 
 .container {
     border: 2px solid red;
     padding: 40px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 25px;
+}
+
+.buttons {
+    display: flex;
+    gap: 80px;
 }
 
 .scorecontainer {
-    border: 2px solid red;
     margin: 40px;
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .scorecard {
-    border: 2px solid red;
     width: 200px;
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
 }
 
 .button {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
 }
 
 
