--- a/styles.css
+++ b/styles.css
@@ -8,23 +8,23 @@ body {
 }
 
 .container {
-    border: 2px solid red;
     padding: 40px;
     display: flex;
-    flex-wrap: wrap;
+    flex: 1;
     flex-direction: column;
     align-items: center;
-    gap: 25px;
+    gap: 40px;
 }
 
 .buttons {
+    width: 100%;
     display: flex;
+    justify-content: center;
     gap: 80px;
 }
 
 .scorecontainer {
     margin: 40px;
-    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -38,8 +38,34 @@ body {
 }
 
 .button {
+    border: none;
+    border-radius: 10px;
+    text-decoration: none;
+    cursor: pointer;
+    transition-duration: 0.4s;
     width: 200px;
-    height: 200px;
+    height: 175px;
+    font-size: 120%;
+    font-weight: 600;
+}
+
+.button:hover {
+    box-shadow: 0 16px 20px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.footer {
+    background-color: darkslategray;
+    color: aliceblue;
+    font-weight: 500;
+    padding: 20px 30px ;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.result {
+    margin-top: 35px;
 }
 
 
