--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,13 @@ body {
     gap: 40px;
 }
 
+.resetbutton {
+    margin-top: 50px;
+    margin-bottom: auto;
+    padding-top: 50px;
+    padding-bottom: 150px;
+}
+
 .buttons {
     width: 100%;
     display: flex;
@@ -49,6 +56,16 @@ body {
     font-weight: 600;
 }
 
+.reset {
+    border: none;
+    border-radius: 10px;
+    text-decoration: none;
+    width: 200px;
+    height: 45px;
+    font-size: 15px;
+    font-weight: 300;
+}
+
 .button:hover {
     box-shadow: 0 16px 20px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
@@ -65,8 +82,12 @@ body {
 }
 
 .result {
+    font-size: 20px;
+    font-style: italic;
     margin-top: 35px;
 }
+
+
 
 
 /*text stuff*/
